Corregida informacion para ejecutar el proyecto con Docker utilizando docker-compose